# GasBlender

./: .gitignore  CMakeLists.txt  README.md
include/: gas.h  partial_pressure_blend.h
src/: gas.cpp  partial_pressure_blend.cpp
